# research

./: .gitignore  README.md  create_dataset.ipynb  create_model.ipynb  move_s3.py  predict.ipynb  pyproject.toml  sample_settings.ini
models/: availability_model_trainer.py  config.py  eta_model_trainer.py  s3.py
notebooks/: create_dataset.ipynb  create_model_avail.ipynb  create_model_eta.ipynb  explore.ipynb  lgbm_all_stations.ipynb  minutes_bt_check.ipynb  mlpreg_vs_lgbm.ipynb  multimodel_vs_features.ipynb  predict.ipynb  query_times.ipynb  random_forest_lgbm.ipynb  stations.ipynb
