[tool.poetry]
name = "research-bicisba"
version = "0.1.0"
description = "Data research for BicisBA."
authors = ["flopezd <fdestain@fi.uba.ar>"]
license = "MIT"
readme = "README.md"
packages = [{include = "research_bicisba"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.5.0"
tqdm = "^4.64.1"
boto3 = "^1.24.89"
matplotlib = "^3.6.1"
pyarrow = "^9.0.0"
prophet = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
