[tool.poetry]
name = "research-bicisba"
version = "0.1.0"
description = "Data research for BicisBA."
authors = ["flopezd <fdestain@fi.uba.ar>"]
license = "MIT"
readme = "README.md"
packages = [{include = "research_bicisba"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
pandas = "^1.5.0"
tqdm = "^4.64.1"
boto3 = "^1.24.89"
matplotlib = "3.6.0"
pyarrow = "^9.0.0"
prophet = "^1.1.1"
seaborn = "^0.12.1"
duckdb = "^0.5.1"
sqlparse = "^0.4.3"
Jinja2 = "~3.0"
jinjasql = "^0.1.8"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
